# uavred

./: .gitmodules  .workmux.yaml  AGENTS.md  ARCHITECTURE_DESIGN_PLAN.md  ARCHITECTURE_SETUP_SUMMARY.md  ARCHITECTURE_TASK_CHECKLIST.md  BD_WORKFLOW.md  CODE_ORGANIZATION.md  CONTRIBUTING.md  Cargo.toml  DESIGN_ANALYSIS.md  LICENSE  Makefile  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  UAVRed UI 并行开发任务分解.md  UI_DESIGN_COMPLETION.md  UI_IMPLEMENTATION_PLAN.md  UI_PROGRESS.md  WARP.md  config.example.toml
.beads/: issues.jsonl
crates/agent/: Cargo.toml
crates/agent/src/: executor.rs  lib.rs  scheduler.rs
crates/assets_ui/: Cargo.toml
crates/assets_ui/src/: lib.rs
crates/core/: Cargo.toml
crates/dashboard_ui/: Cargo.toml
crates/dashboard_ui/src/: components.rs  dashboard_panel.rs  findings.rs  lib.rs  mission_control.rs  theme.rs
crates/data/: Cargo.toml
crates/data/src/: database.rs  lib.rs  memory.rs  models.rs  repository.rs  task_store.rs
crates/flows_ui/: Cargo.toml
crates/flows_ui/src/: lib.rs
crates/scan_ui/: Cargo.toml
crates/scan_ui/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: firmware.rs  network.rs  protocol.rs
crates/traffic_ui/: Cargo.toml
crates/traffic_ui/src/: lib.rs
crates/uavred/: Cargo.toml
crates/uavred/src/: main.rs  workspace.rs
crates/ui/: Cargo.toml
crates/ui/src/: actions.rs  events.rs  lib.rs  theme.rs
crates/vulns_ui/: Cargo.toml
crates/vulns_ui/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
crates/workspace_ui/: Cargo.toml
crates/workspace_ui/src/: app_state.rs  dialog.rs  events.rs  item.rs  keybindings.rs  lib.rs  pane.rs  pane_group.rs  resize_handle.rs  sidebar.rs
docs/: ARCHITECTURE.md  DASHBOARD_UI_ANALYSIS.md  DATABASE_CONNECTION.md  UI_ARCHITECTURE.md  UI_COMPONENTS.md  UI_IMPLEMENTATION.md  ZED_PANE_ARCHITECTURE.md  ZED_UI_PATTERNS.md  ZED_WORKSPACE_ARCHITECTURE.md  component_library.md  implementation_guide.md  interaction_flows.md  requirements.md  task_breakdown.md  ui_design.md
docs/ui/: BLUEPRINT.md  UI_AGENT_RULES.md
examples/: ui_showcase.rs
scripts/: setup.sh
src/: app.rs  kanban.rs  lib.rs  main.rs
src/agent/: executor.rs  scheduler.rs
src/core/: mod.rs  task.rs  vuln_db.rs
src/scanner/: firmware.rs  mod.rs  network.rs  protocol.rs
src/ui/: agent_panel.rs  agents.rs  card.rs  dashboard.rs  findings.rs  kanban.rs  mod.rs  navigation.rs  prelude.rs  results.rs
tests/: kanban_tests.rs
