[package]
name = "uav-redteam"
version = "0.1.0"
edition = "2021"
authors = ["Red Team"]
description = "Autonomous agent-driven red team penetration testing tool for UAV ecosystem"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
ui = { package = "gpui-component", git = "https://github.com/longbridge/gpui-component" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
