[package]
name = "workspace_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { path = "../../src/gpui-component/crates/ui", package = "gpui-component" }
data = { path = "../data" }
ui = { path = "../ui" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
collections = { git = "https://github.com/zed-industries/zed", package = "collections" }
parking_lot = "0.12"
